[package]
name = "youki-nix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "help", "usage", "suggestions"] }
oci-spec = { version = "0.10.0", features = ["runtime"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "1.1.2"
tracing = { workspace = true }
